--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "next": "14.1.3",
     "react": "^18",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18"
   },
   "devDependencies": {
