--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query-devtools": "^5.25.0",
     "@tanstack/react-query-next-experimental": "^5.25.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "next": "14.1.3",
     "react": "^18",
     "react-datepicker": "^6.6.0",
