--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.2",
     "next": "14.1.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18"
   },
