--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.6.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
